# ai-coordination-system

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/: architecture.md  design_decisions.md  project_description.md  project_plan.md  roadmap.md
src/agents/: analysis_agent.py  base_agent.py  reporting_agent.py  research_agent.py
src/coordination/: coordinator.py  escalation.py  models.py  router.py
src/coordinator/: coordinator.py  router.py  state_manager.py  task_queue.py
src/models/: task.py
src/utils/: logging_utils.py
tests/: conftest.py  test_agents.py  test_coordinator.py  test_router.py  test_state_manager.py  test_task_queue.py
